fix align text

--- a/src/Datepicker/Item/css/Item.css
+++ b/src/Datepicker/Item/css/Item.css
@@ -8,6 +8,7 @@
     font: 400 0.9em Arial;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .datepicker-item:hover {
