--- a/src/SignIn/css/SignIn.css
+++ b/src/SignIn/css/SignIn.css
@@ -60,6 +60,7 @@
     transition: transform 0.5s linear;
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 0;
 }
 
